# meikipop

./: .gitignore  README.md  build.dictionary.bat  build.dictionary.sh  build.win.dist.bat  build_dictionary.bat  build_dictionary.py  dictionary.py  glens.py  gui.py  lens_betterproto.py  lookup.py  main.py  meikipop.linux.x64.spec  meikipop.macos.spec  meikipop.run.sh  meikipop.sh  meikipop.spec  meikipop.win.x64.spec  popup.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: build-dictionary.yml  build-flatpak.yml  build-linux.yml  build-macos.yml  build-windows.yml  pr-build.yaml  pr-build.yml  release.yaml  release.yml
data/: deconjugator.json  priority.json
docs/: AGENTS.md  CUSTOM_OCR_PROVIDER.md  MACOS_BUILD_AND_TESTS.md
flatpak/: gen_deps.py  manifest.yml  meikipop.desktop  metainfo.xml
resources/: meikipop.desktop
scripts/: build_dictionary.py  build_macos_app.sh  import_yomitan_dict.py  import_yomitan_dict_html.py  process.py  process_kanji.py  process_kanjidic.py
src/: main.py
src/config/: config.py
src/dictionary/: customdict.py  deconjugator.py  dictionary.py  lookup.py  models.py
src/gamepad/: __init__.py  controller.py  navigation.py
src/gui/: input.py  input_wayland.py  overlay_furigana.py  overlay_selection.py  popup.py  region_selector.py  settings_dialog.py  tray.py
src/meikipop/: __init__.py  main.py  paths.py
src/meikipop/config/: config.py  paths.py
src/meikipop/dictionary/: customdict.py  lookup.py
src/meikipop/gui/: input.py  magpie_manager.py  popup.py  region_selector.py  settings_dialog.py  tray.py
src/meikipop/ocr/: hit_scan.py  interface.py  ocr.py
src/meikipop/screenshot/: screenmanager.py  wayland_mss_shim.py
src/meikipop/scripts/: __init__.py  build_dictionary.py  import_yomitan_dict_html.py  (+1 more)
src/ocr/: glens.py  hit_scan.py  hitdetector.py  ocr.py
src/parser/: furigana.py  sudachi.py
src/screenshot/: backends.py  screenmanager.py  wayland_mss_shim.py
src/utils/: anki.py  lastest_queue.py  logger.py  platform.py
(+19 files in other folders)
